{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 80,
  "lineage": "8660d7f0-ff98-9e54-05be-3e1ce494bd22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01764c279202073e6",
            "domain": "vpc",
            "id": "eipalloc-01764c279202073e6",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-253-53-186.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.53.186",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:internet-gateway/igw-063b86e621a36e1cd",
            "id": "igw-063b86e621a36e1cd",
            "owner_id": "558846273693",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-test-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01764c279202073e6",
            "connectivity_type": "public",
            "id": "nat-07dced0bec0c0bf53",
            "subnet_id": "subnet-03e81c93101cfabb6",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_subnet.az1",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063b86e621a36e1cd",
            "id": "r-rtb-025c7427490d145d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-025c7427490d145d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-test-igw",
            "aws_route_table.vpc-test-rt",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routes-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-test-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:route-table/rtb-025c7427490d145d0",
            "id": "rtb-025c7427490d145d0",
            "owner_id": "558846273693",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d2cd3e04fff7e0a",
            "route_table_id": "rtb-025c7427490d145d0",
            "subnet_id": "subnet-03e81c93101cfabb6"
          },
          "dependencies": [
            "aws_route_table.vpc-test-rt",
            "aws_subnet.az1",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-a-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052abe3b0ffcaf715",
            "route_table_id": "rtb-07cbd87f15b5fad9b",
            "subnet_id": "subnet-02e1197cde651927e"
          },
          "dependencies": [
            "aws_subnet.az1-priv",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0655db0f41dbfbb8d",
            "route_table_id": "rtb-025c7427490d145d0",
            "subnet_id": "subnet-02f90cd2a42ab6f37"
          },
          "dependencies": [
            "aws_route_table.vpc-test-rt",
            "aws_subnet.az2",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-b-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0123aa0261254cc",
            "route_table_id": "rtb-07cbd87f15b5fad9b",
            "subnet_id": "subnet-07471ea138bc03d08"
          },
          "dependencies": [
            "aws_subnet.az2-priv",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04848180ca35f87f9",
            "route_table_id": "rtb-025c7427490d145d0",
            "subnet_id": "subnet-06b827a5273942cd7"
          },
          "dependencies": [
            "aws_route_table.vpc-test-rt",
            "aws_subnet.az3",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-test-az-c-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f67e9aa419a76db4",
            "route_table_id": "rtb-07cbd87f15b5fad9b",
            "subnet_id": "subnet-01918c130c51370a9"
          },
          "dependencies": [
            "aws_subnet.az3-priv",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-aurora-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:security-group/sg-036212d1c1c057e3b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-036212d1c1c057e3b",
            "ingress": [],
            "name": "test-aurora-sg",
            "name_prefix": "",
            "owner_id": "558846273693",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-03e81c93101cfabb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e81c93101cfabb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-02e1197cde651927e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e1197cde651927e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-02f90cd2a42ab6f37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f90cd2a42ab6f37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-07471ea138bc03d08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07471ea138bc03d08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-06b827a5273942cd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b827a5273942cd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az3-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:subnet/subnet-01918c130c51370a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01918c130c51370a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "558846273693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            },
            "vpc_id": "vpc-056be4113be0a1db2"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:558846273693:vpc/vpc-056be4113be0a1db2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-023416511953b03bf",
            "default_route_table_id": "rtb-07cbd87f15b5fad9b",
            "default_security_group_id": "sg-050f155421038f8cf",
            "dhcp_options_id": "dopt-0a279155cdc79bdf1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056be4113be0a1db2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cbd87f15b5fad9b",
            "owner_id": "558846273693",
            "tags_all": {
              "Test": "ec2-demo",
              "region": "eu-west-1"
            }
          }
        }
      ]
    }
  ]
}